# datahelm

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: adminer-desktop-brd-v2.md  adminer-desktop-data-state-model-v2.md  adminer-desktop-delivery-roadmap-v2.md  adminer-desktop-epics-user-stories-v2.md  adminer-desktop-frd-v2.md  adminer-desktop-index.md  adminer-desktop-milestone-implementation-plan-v2.md  adminer-desktop-qa-test-strategy-v2.md  adminer-desktop-technical-design-v2.md  adminer-desktop-technical-spike-plan-v2.md  adminer-desktop-ux-spec-wireflow-v2.md  datahelm-brd-v2.md  datahelm-data-state-model-v2.md  datahelm-delivery-roadmap-v2.md  datahelm-epics-user-stories-v2.md  datahelm-frd-v2.md  datahelm-index.md  datahelm-live-validation-checklist.md  datahelm-m0-implementation-tickets.md  datahelm-m0-review.md  datahelm-m1-implementation-tickets.md  datahelm-milestone-implementation-plan-v2.md  datahelm-qa-test-strategy-v2.md  datahelm-technical-design-v2.md  datahelm-technical-spike-plan-v2.md  datahelm-ux-spec-wireflow-v2.md
spikes/: README.md
spikes/reports/: sp-01-report.md  sp-02-report.md  sp-03-report.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: contracts.rs  lib.rs  main.rs  safety.rs  secret_store.rs  state.rs
src-tauri/src/adapters/: mod.rs  mysql.rs  postgres.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/runtime/: mod.rs
src/api/: tauri-client.ts
src/app/: App.tsx
(+1 files in other folders)
