[package]
name = "datahelm"
version = "0.1.0"
description = "DataHelm desktop shell"
authors = ["DataHelm Team"]
edition = "2021"

[lib]
name = "datahelm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

