[package]
name = "datahelm"
version = "0.1.0"
description = "DataHelm desktop shell"
authors = ["DataHelm Team"]
edition = "2021"

[lib]
name = "datahelm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
